--- a/Practica6/CollaborativeFiltering(2)-undone.ipynb
+++ b/Practica6/CollaborativeFiltering(2)-undone.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -63,22 +63,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Las dimensiones son correctas:\n",
-      "Dimensiones de Y: (943, 1682) - Esperadas: (943, 1682)\n",
-      "Dimensiones de R: (943, 1682) - Esperadas: (943, 1682)\n",
+      "Error en las dimensiones:\n",
+      "Dimensiones de Y: (1682, 943) - Esperadas: (943, 1682)\n",
+      "Dimensiones de R: (1682, 943) - Esperadas: (943, 1682)\n",
       "Matriz Y:\n",
-      "[[5. 3. 4. 3. 3.]\n",
+      "[[5. 4. 0. 0. 4.]\n",
+      " [3. 0. 0. 0. 3.]\n",
       " [4. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [4. 3. 0. 0. 0.]]\n",
+      " [3. 0. 0. 0. 0.]\n",
+      " [3. 0. 0. 0. 0.]]\n",
       "\n",
       "Matriz R:\n",
-      "[[1. 1. 1. 1. 1.]\n",
+      "[[1. 1. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 1.]\n",
       " [1. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [1. 1. 0. 0. 0.]]\n"
+      " [1. 0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0. 0.]]\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -509,36 +509,36 @@
       "The above two columns you get should be very similar.\n",
       "(Left - Your Numerical Gradient, Right - Analytical Gradient)\n",
       "\n",
-      "(-0.37230596830306606, -0.372305968303198)\n",
-      "(-0.15962446347606019, -0.15962446347621445)\n",
-      "(-0.42991107743028945, -0.42991107743033785)\n",
-      "(-0.04259039937670739, -0.042590399377181586)\n",
-      "(0.09332492172831053, 0.09332492172855393)\n",
-      "(0.11006353356490806, 0.11006353356491724)\n",
-      "(0.2991745313069005, 0.29917453130720817)\n",
-      "(0.2224783509180428, 0.22247835091872117)\n",
-      "(0.4853868313497989, 0.4853868313497523)\n",
-      "(0.2734918927305152, 0.27349189273066193)\n",
-      "(0.17894653646877146, 0.17894653646861358)\n",
-      "(0.4442642274277153, 0.4442642274278332)\n",
-      "(0.18695079772423906, 0.18695079772394307)\n",
-      "(0.14545283945732734, 0.14545283945704493)\n",
-      "(0.009925476039396308, 0.009925476039477821)\n",
-      "(-0.37802633278405384, -0.37802633278366415)\n",
-      "(-0.28065446828540175, -0.28065446828548635)\n",
-      "(-0.13872284196247975, -0.1387228419627965)\n",
-      "(0.9630899618645605, 0.9630899618639875)\n",
-      "(0.4746935901195348, 0.4746935901199118)\n",
-      "(0.8458184595661056, 0.8458184595658788)\n",
-      "(0.08038265273013767, 0.08038265272989503)\n",
-      "(0.06253990474991422, 0.06253990475032577)\n",
-      "(0.004267626045884043, 0.004267626045855912)\n",
-      "(-0.05220411151252158, -0.05220411151250683)\n",
-      "(-0.03773713106891563, -0.03773713106901278)\n",
-      "(-0.009169295713262748, -0.009169295713454068)\n",
+      "(-2.1671222630903486, -2.1671222630887312)\n",
+      "(-1.869123836848452, -1.8691238368475827)\n",
+      "(-0.9300152790459038, -0.9300152790452532)\n",
+      "(-1.5841439076647035, -1.5841439076659005)\n",
+      "(-1.188446170479196, -1.1884461704788276)\n",
+      "(-0.8390474059893904, -0.8390474059899131)\n",
+      "(-1.0626437899041719, -1.0626437899038597)\n",
+      "(-0.5930092499539796, -0.5930092499513944)\n",
+      "(-0.32522667815726436, -0.3252266781573216)\n",
+      "(0.6138219467599626, 0.6138219467592629)\n",
+      "(0.7703441066952976, 0.7703441066988151)\n",
+      "(0.6421432611958267, 0.6421432611923157)\n",
+      "(-1.461896466650181, -1.461896466651514)\n",
+      "(-0.696525969954287, -0.6965259699584189)\n",
+      "(-2.2256863179181963, -2.2256863179217206)\n",
+      "(0.013073552138642697, 0.013073552137715801)\n",
+      "(0.16204940705311088, 0.16204940705401016)\n",
+      "(-0.03661503070073735, -0.03661503070342405)\n",
+      "(-0.03125837838791057, -0.03125837839038152)\n",
+      "(0.23852381616062956, 0.23852381616025845)\n",
+      "(-0.3482475325489176, -0.3482475325542487)\n",
+      "(-0.5702280951069838, -0.5702280951053349)\n",
+      "(-0.2563765190322087, -0.2563765190281943)\n",
+      "(-1.0080054499450597, -1.0080054499466327)\n",
+      "(-0.1264470848694188, -0.12644708486970174)\n",
+      "(0.352997658978893, 0.3529976589760218)\n",
+      "(-0.6071345602620681, -0.6071345602651743)\n",
       "If your backpropagation implementation is correct, then \n",
       "the relative difference will be small (less than 1e-9).\n",
-      "Relative Difference: 4.10331262e-13\n",
+      "Relative Difference: 1.19976254e-12\n",
       "\n"
      ]
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -560,36 +560,36 @@
       "The above two columns you get should be very similar.\n",
       "(Left - Your Numerical Gradient, Right - Analytical Gradient)\n",
       "\n",
-      "(2.3745109592532287, 2.374510959246948)\n",
-      "(0.7516304758858894, 0.7516304758733783)\n",
-      "(2.168703857456933, 2.1687038574543935)\n",
-      "(-0.7463939747598403, -0.746393974766725)\n",
-      "(0.06598723583550736, 0.0659872358444421)\n",
-      "(-1.0513099241205026, -1.0513099241231594)\n",
-      "(1.958885205359806, 1.9588852053664132)\n",
-      "(2.2129394637282473, 2.212939463742857)\n",
-      "(2.281409909761223, 2.28140990975978)\n",
-      "(2.685362698375826, 2.6853626983860126)\n",
-      "(2.621949842724902, 2.621949842734727)\n",
-      "(1.3777582693919044, 1.3777582693984218)\n",
-      "(2.465198863763618, 2.465198863752968)\n",
-      "(2.5938746503761934, 2.5938746503859758)\n",
-      "(1.187873515853255, 1.1878735158519373)\n",
-      "(1.9297806247031701, 1.9297806247042524)\n",
-      "(1.6870726047635287, 1.687072604765489)\n",
-      "(2.7507041347529793, 2.750704134750799)\n",
-      "(1.8827885822592094, 1.8827885822593822)\n",
-      "(1.3761534179845825, 1.3761534179883745)\n",
-      "(0.8736146930576894, 0.8736146930511678)\n",
-      "(0.48836096041782184, 0.48836096042484495)\n",
-      "(0.4597524201876979, 0.4597524201923976)\n",
-      "(0.9333493137475557, 0.9333493137464437)\n",
-      "(1.8180495420150322, 1.8180495420199871)\n",
-      "(0.05954034894450899, 0.05954034894838739)\n",
-      "(1.3824741881762748, 1.3824741881793723)\n",
+      "(-0.23208114839690097, -0.23208114839975652)\n",
+      "(-0.8143033805252387, -0.814303380516763)\n",
+      "(-0.6702195264329802, -0.6702195264386588)\n",
+      "(0.30772342345386505, 0.3077234234538109)\n",
+      "(0.9216747475093712, 0.9216747475038201)\n",
+      "(0.02001694605180404, 0.020016946058665774)\n",
+      "(1.358054141453735, 1.3580541414523268)\n",
+      "(0.7684705299970673, 0.768470529998766)\n",
+      "(0.3163403082817595, 0.3163403082795445)\n",
+      "(1.1342937174996237, 1.1342937174996144)\n",
+      "(1.5121186213251647, 1.5121186213235793)\n",
+      "(1.3885875112418233, 1.3885875112427453)\n",
+      "(0.0012647084890460292, 0.0012647084900785366)\n",
+      "(0.9062907786239194, 0.9062907786332649)\n",
+      "(1.0324446249443398, 1.032444624946855)\n",
+      "(1.077624754404205, 1.0776247544005022)\n",
+      "(1.1175909060634481, 1.1175909060637979)\n",
+      "(1.048878724789759, 1.0488787247897)\n",
+      "(0.78598463298718, 0.7859846329835674)\n",
+      "(1.4007813719052464, 1.400781371902804)\n",
+      "(0.755970458694577, 0.7559704586916994)\n",
+      "(-0.4680006879498322, -0.4680006879510154)\n",
+      "(-0.6334300404464699, -0.6334300404430844)\n",
+      "(0.27189263594351587, 0.27189263594483365)\n",
+      "(0.250004383306468, 0.2500043833041779)\n",
+      "(0.949403758485623, 0.9494037584886927)\n",
+      "(0.7576494670136213, 0.7576494670157607)\n",
       "If your backpropagation implementation is correct, then \n",
       "the relative difference will be small (less than 1e-9).\n",
-      "Relative Difference: 1.92423414e-12\n",
+      "Relative Difference: 2.11081421e-12\n",
       "\n"
      ]
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -630,21 +630,21 @@
      "output_type": "stream",
      "text": [
       "Las dimensiones son correctas:\n",
-      "Dimensiones de Y: (943, 1682) - Esperadas: (943, 1682)\n",
-      "Dimensiones de R: (943, 1682) - Esperadas: (943, 1682)\n",
+      "Dimensiones de Y: (1682, 943) - Esperadas: (1682, 943)\n",
+      "Dimensiones de R: (1682, 943) - Esperadas: (1682, 943)\n",
       "Matriz Y:\n",
-      "[[5. 3. 4. 3. 3.]\n",
+      "[[5. 4. 0. 0. 4.]\n",
+      " [3. 0. 0. 0. 3.]\n",
       " [4. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [4. 3. 0. 0. 0.]]\n",
+      " [3. 0. 0. 0. 0.]\n",
+      " [3. 0. 0. 0. 0.]]\n",
       "\n",
       "Matriz R:\n",
-      "[[1. 1. 1. 1. 1.]\n",
+      "[[1. 1. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 1.]\n",
       " [1. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [1. 1. 0. 0. 0.]]\n"
+      " [1. 0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0. 0.]]\n"
      ]
     }
    ],
@@ -660,8 +660,10 @@
     "num_users = np.max(ratings_data[:, 0])\n",
     "num_movies = np.max(ratings_data[:, 1])\n",
     "\n",
-    "dim_Y = (num_users, num_movies)\n",
-    "dim_R = (num_users, num_movies)\n",
+    "\n",
+    "\n",
+    "dim_Y = (num_movies, num_users)\n",
+    "dim_R = (num_movies, num_users)\n",
     "\n",
     "# Supongamos que estas son las matrices cargadas\n",
     "Y = np.load('matriz_Y.npy')\n",
@@ -700,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,13 +712,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CODE ..................................\n",
     "# Assuming Y and R have already been loaded\n",
-    "n_users, n_movies = Y.shape\n",
+    "n_movies, n_users = Y.shape\n",
     "\n",
     "# Number of features\n",
     "n_features = 100\n",
@@ -739,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,25 +758,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(1682, 943)\n",
+      "(1682, 943)\n",
       "Warning: Maximum number of iterations has been exceeded.\n",
-      "         Current function value: 66580.380065\n",
+      "         Current function value: 66580.046998\n",
       "         Iterations: 200\n",
-      "         Function evaluations: 303\n",
-      "         Gradient evaluations: 303\n"
+      "         Function evaluations: 293\n",
+      "         Gradient evaluations: 293\n"
      ]
     }
    ],
    "source": [
-    "# Ensure Y and R are in the correct shape\n",
-    "Y = Y.T if Y.shape[0] != n_movies else Y\n",
-    "R = R.T if R.shape[0] != n_movies else R\n",
+    "print(Y.shape)\n",
+    "print(R.shape)\n",
+    "\n",
+    "\n",
     "\n",
     "# Minimize the function using minimize from the package scipy.optimize and get the optimized parameters\n",
     "parameters = (minimize(cofiCostFunc_minimize, initial_parameters, method=\"CG\", jac=True,\n",
@@ -792,20 +797,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1682, 100)\n",
+      "(943, 100)\n",
+      "(1682, 943)\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE ..................................\n",
     "\n",
     "# Reshape the optimized parameters back into X and Theta matrices\n",
     "X_optimized = parameters[:n_movies * n_features].reshape(n_movies, n_features)\n",
     "Theta_optimized = parameters[n_movies * n_features:].reshape(n_users, n_features)\n",
+    "print(X_optimized.shape)\n",
+    "print(Theta_optimized.shape)\n",
     "\n",
     "# Now, you can use X_optimized and Theta_optimized for making predictions or further analysis\n",
     "\n",
     "# Calcular la matriz de predicciones P\n",
     "P = np.dot(X_optimized, Theta_optimized.T)\n",
+    "print(P.shape)\n",
     "# P ahora contiene las predicciones de calificaciones para cada par de película y usuario"
    ]
   },
@@ -823,20 +841,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
+   "execution_count": 103,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     itemid                                      title\n",
-      "27       28                           Apollo 13 (1995)\n",
-      "48       49                                I.Q. (1994)\n",
-      "90       91     Nightmare Before Christmas, The (1993)\n",
-      "211     212  Unbearable Lightness of Being, The (1988)\n",
-      "155     156                      Reservoir Dogs (1992)\n"
+      "49               Star Wars (1977)\n",
+      "99                   Fargo (1996)\n",
+      "168    Wrong Trousers, The (1993)\n",
+      "407         Close Shave, A (1995)\n",
+      "284         Secrets & Lies (1996)\n",
+      "Name: title, dtype: object\n",
+      "[5.03385052 5.06223251 5.1203045  5.20062706 5.51531602]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5.515316019193881"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -853,18 +884,36 @@
     "# show the first 5 rows of the dataframe\n",
     "items.head()\n",
     "\n",
-    "# Supongamos que R y P ya están definidos correctamente\n",
-    "not_watched_by_user = np.where(R[0, :] == 0)\n",
-    "predictions_for_user = P[:, 0][not_watched_by_user]\n",
-    "top_5_indices = np.argsort(predictions_for_user)[-5:]\n",
-    "top_5_movie_titles = items.iloc[top_5_indices]\n",
+    "# Continuando con tus variables existentes\n",
+    "\n",
+    "# Identificar películas no vistas por el usuario u=0\n",
+    "not_watched_by_user = np.where(R[0, :] == 0)[0] # Obtiene los índices de las películas no vistas\n",
+    "predictions_for_user = P[not_watched_by_user, 0]\n",
+    "top_5_indices_not_watched = np.argsort(predictions_for_user)[-5:]\n",
+    "top_5_movie_indices = not_watched_by_user[top_5_indices_not_watched]\n",
+    "top_5_movie_titles = items.iloc[top_5_movie_indices]['title']\n",
+    "\n",
+    "# Mostrar los títulos y las predicciones correspondientes\n",
+    "print(top_5_movie_titles)\n",
+    "print(predictions_for_user[top_5_indices_not_watched])\n",
+    "\n",
+    "\n",
+    "np.max(P[:,0])\n",
     "\n",
     "# Mostrar los títulos de las 5 mejores predicciones\n",
-    "print(top_5_movie_titles)\n",
+    "#print(top_5_movie_titles)\n",
+    "\n",
     "\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
